# pyPalace

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_AGENTIC.md  eigenmode_example.json  eigenmode_example.py  pypalace_eigenmode_example.py  pyproject.toml
.github/workflows/: docs.yml
Examples/: README.md
Examples/ Flux through a SQUID loop (Magnetostatics)/: README.md  qiskit_metal-tunable_xmon.ipynb  scqubits_analysis.ipynb  tunable_xmon.gds  tunable_xmon.json  tunable_xmon_config_generator.ipynb  tunable_xmon_config_generator.py
Examples/Flux through a SQUID loop (Magnetostatics)/: README.md  qiskit_metal-tunable_xmon.ipynb  scqubits_analysis.ipynb  tunable_xmon.json  tunable_xmon_HPC.py  tunable_xmon_config_generator.ipynb  tunable_xmon_config_generator.py
Examples/Flux through a SQUID loop (Magnetostatics)/magneto_output/: surface-F.csv
Examples/Qubit Hamiltonian from Capacitance Matrix (Electrostatics)/: Hamiltonian_params_with_scQubits.ipynb  README.md  pocket_transmon-electrostatic_sim.json  pyPalace_electrostatic_qubit_example.ipynb  qiskit-metal_qubit_builder.ipynb  xmon-electrostatic_sim.json
Examples/Qubit Hamiltonian from Capacitance Matrix (Electrostatics)/pocket_electro_output/: terminal-C.csv
Examples/example_00_Quantum_Metal_to_pyPalace/: README.md  example00_notebook.ipynb
Examples/example_00_Quantum_Metal_to_pyPalace/config/: example00.json
Examples/example_00_Quantum_Metal_to_pyPalace/example00_output/: eig.csv  port-EPR.csv
Examples/example_01_eigenmode_EPR/: README.md  example01_analysis.py  example01_analysis_notebook.ipynb  example01_field_visualization.py  example01_script.py
Examples/example_02_electrostatics_LOM/: README.md  build_and_mesh_transmons.ipynb  example02_notebook.ipynb  example02_notebook_TransmonCross.ipynb  example02_notebook_pocketTransmon.ipynb  example02_script_TransmonCross.py  example02_script_pocketTransmon.py
Examples/example_03_fdomain_driven_resonator/: README.md  dcm_patch_v013.py  example03_analysis_notebook.ipynb  example03_script.py
Examples/iterative studies with pyPalace/: README.md  eight-res-study.py  simulate_8_resonator_chip.py
Examples/qubit-resonator eigenmode/: README.md  qubit_res.json  qubit_res_eigenmode_example.ipynb  qubit_res_eigenmode_example.py
Examples/resonator eigenmode/: README.md  resonator_eigenmode_example.ipynb  resonator_eigenmode_example.py  single_resonator.json
docs/docs/source/: modules.rst  pypalace.rst
docs/source/: conf.py  examples.rst  index.rst  installation.rst  modules.rst  pypalace.rst  quickstart.rst  user_guide.rst
examples/agentic/: transmon_cross_study.json
pypalace/: README.md  __init__.py  analysis.py  builder.py  config.py  mesh.py  meshing.py  palace_env.py  simulation.py  tools.py  utils.py
pypalace_agent/: __init__.py  cli.py  mcp_server.py  schema.py  study.py  targets.py  trial.py
pypalace_agent/templates/: __init__.py  transmon_cross.py
tests/: test_agentic_targets.py
(+9 files in other folders)
