[project]
name = "pypalace"
version = "0.1.2"
description = "A Python toolkit for superconducting circuit design and simulation workflows using AWS Palace."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "Firas Abouzahr" }
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.5",
    "scqubits>=4.0,<5.0",
    "matplotlib>=3.5",
    "pyvista>=0.40",
    "scipy>=1.7",
    "gmsh>=4.11",
    "shapely>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
agentic = [
    "optuna>=3.0",
    "pydantic>=2.0",
    "mcp>=1.0",
]

[project.scripts]
pypalace-agent = "pypalace_agent.cli:main"

[project.urls]
Homepage = "https://github.com/FirasAbouzahr/pyPalace"
Repository = "https://github.com/FirasAbouzahr/pyPalace"
Issues = "https://github.com/FirasAbouzahr/pyPalace/issues"
PyPI = "https://pypi.org/project/pypalace/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pypalace*", "pypalace_agent*"]
